<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/store_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@color/css_gray"

            android:contentDescription="@string/store_image" />

        <TextView
            android:id="@+id/store_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/store_image"
            android:layout_marginTop="4dp"
            android:padding="10dp"
            android:text="@string/store_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textStyle="bold"
            android:background="#4AAF2020"
            android:theme="@style/ThemeOverlay.AppCompat.Light" />

        <TextView
            android:id="@+id/store_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/store_title"
            android:layout_marginTop="4dp"
            android:drawableStart="@drawable/ic_baseline_restaurant_24"
            android:padding="10dp"
            android:text="@string/open_daily_from_7_00_am"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?android:textColorSecondary"
            android:theme="@style/ThemeOverlay.AppCompat.Light" />
        <!--Add a horizontal line-->
        <TextView
            android:id="@+id/store_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/store_time"
            android:layout_marginTop="3dp"
            android:padding="8dp"
            android:text="@string/store_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/navy_blue"
            android:textStyle="italic"
            android:theme="@style/ThemeOverlay.AppCompat.Light" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/store_description"
            android:background="@color/css_gray" />
        <RatingBar
            android:id="@+id/store_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider"
            android:numStars="5"
            android:layout_marginStart="10dp"
            android:rating="3.5"
            style="?android:attr/ratingBarStyleSmall"
            />
        <TextView
            android:id="@+id/rating_details"
            android:text="@string/not_rated"
            android:textStyle="italic"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/store_rating"
            android:layout_below="@+id/divider"/>

        <TextView
            android:id="@+id/like"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_below="@+id/store_rating"
            android:drawableStart="@drawable/ic_like"
            android:text="@string/like"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:textSize="15dp"
            />
        <TextView
            android:id="@+id/comment"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/store_rating"
            android:drawableStart="@drawable/ic_comment"
            android:text="@string/comment"
            android:paddingStart="90dp"
            android:paddingEnd="1dp"
            android:textStyle="bold"
            android:layout_toEndOf="@+id/like"
            android:textSize="15dp"
            />
        <TextView
            android:id="@+id/share"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/store_rating"
            android:drawableStart="@drawable/ic_share"
            android:text="@string/share"
            android:paddingStart="85dp"
            android:paddingEnd="1dp"
            android:textStyle="bold"
            android:textSize="15dp"
            android:layout_toEndOf="@+id/comment"
            />
    </RelativeLayout>


</androidx.cardview.widget.CardView>