<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/recipe_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@color/css_gray"
            android:paddingBottom="1dp" />

        <TextView
            android:id="@+id/recipe_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/recipe_image"
            android:layout_marginTop="4dp"
            android:padding="10dp"
            android:text="@string/recipe_title"
            android:background="#4AAF2020"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#ffff00"
            android:theme="@style/ThemeOverlay.AppCompat.Light" />

        <TextView
            android:id="@+id/recipe_prep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recipe_title"
            android:layout_marginTop="4dp"
            android:drawableStart="@drawable/ic_preptime"
            android:padding="10dp"
            android:text="@string/preparation_cook_time_2hrs"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?android:textColorSecondary"
            android:theme="@style/ThemeOverlay.AppCompat.Light" />
        <!--Add a horizontal line-->
        <TextView
            android:id="@+id/recipe_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:layout_marginTop="3dp"
            android:padding="8dp"
            android:text="@string/recipe_short_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/navy_blue"
            android:textStyle="italic"
            android:theme="@style/ThemeOverlay.AppCompat.Light" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/recipe_prep"
            android:background="@color/css_gray" />
    </RelativeLayout>


</androidx.cardview.widget.CardView>