<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/pastry_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:adjustViewBounds="true"
            android:background="@color/css_gray"
            android:paddingBottom="10dp" />

        <TextView
            android:id="@+id/pastry_title"
            android:fontFamily="@font/conceptualprogressive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/pastry_image"
            android:layout_marginTop="4dp"
            android:padding="10dp"
            android:text="@string/recipe_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#ffff00"
            android:theme="@style/ThemeOverlay.AppCompat.Light" />

        <TextView
            android:id="@+id/pastry_prep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pastry_title"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/conceptualprogressive"
            android:drawableStart="@drawable/ic_preptime"
            android:padding="10dp"
            android:text="@string/preparation_cook_time_2hrs"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?android:textColorSecondary"
            android:theme="@style/ThemeOverlay.AppCompat.Light" />
        <!--Add a horizontal line-->
        <TextView
            android:id="@+id/pastry_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:layout_marginTop="3dp"
            android:padding="8dp"
            android:text="@string/recipe_short_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/navy_blue"
            android:textStyle="italic"
            android:theme="@style/ThemeOverlay.AppCompat.Light" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/pastry_prep"
            android:fontFamily="@font/conceptualprogressive"
            android:background="@color/css_gray" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>